--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
 # Frontend environment variables
 
 # Public API URL of your backend service
-REACT_APP_API_URL=https://tu-backend.onrender.com
+REACT_APP_API_URL=https://sj-empleados-system.onrender.com
