Update .env.example with new configuration values

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,16 +4,16 @@
 PORT=4000
 
 # MongoDB Atlas connection string
-MONGO_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://sjempleados:<db_password>@sj-empleados-cluster.ygbj0vj.mongodb.net/?appName=sj-empleados-cluster
 
 # JWT secret for authentication
-JWT_SECRET=replace-with-strong-secret
+JWT_SECRET=fdf4b18b489dde6b0cda815200227801
 
 # CORS allowed origins (your frontend URL). Puede ser lista separada por comas.
 # Ejemplos:
 # CORS_ORIGIN=https://tu-frontend.vercel.app
 # CORS_ORIGIN=https://tu-frontend.vercel.app,https://otro-dominio.app
-CORS_ORIGIN=https://tu-frontend.vercel.app
+CORS_ORIGIN=https://sj-empleados-system.vercel.app
 
 # Optional: external storage/CDN (recommended for production uploads)
 # CLOUDINARY_URL=cloudinary://<api_key>:<api_secret>@<cloud_name>
