chore: clean repo for GitHub  purge test/sensitive files, update ignores, add publish guide

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,3 +35,29 @@ CORS_ORIGIN_PATTERNS=
 # Número de envío de WhatsApp (sandbox/approved):
 # Formato: 'whatsapp:+14155238886' (sandbox) o tu número verificado
 # TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
+
+# Recordatorios automáticos (cron y filtros)
+# Habilitar/deshabilitar el scheduler
+REMINDERS_ENABLED=true
+# Cron (por defecto 08:00 todos los días). Formato estándar crontab.
+# Ejemplos:
+# 0 8 * * *   -> 08:00 cada día
+# 30 9 * * 1-5 -> 09:30 de lunes a viernes
+REMINDERS_CRON=0 8 * * *
+# Solo empleados activos (true/false)
+REMINDERS_ONLY_ACTIVE=true
+# Filtrar por departamento (lista separada por comas). Vacío = todos.
+# Ejemplo: Ventas,Administración
+REMINDERS_DEPARTAMENTO=
+# Filtrar por sucursal (lista separada por comas). Vacío = todas.
+# Ejemplo: Casa Central,Sucursal Norte
+REMINDERS_SUCURSAL=
+
+# Seed de usuario por defecto (desarrollo)
+# Establece en 'false' para deshabilitar
+SEED_DEFAULT_USER=true
+# Credenciales por defecto para el seed
+ADMIN_SEED_EMAIL=admin@test.com
+ADMIN_SEED_PASSWORD=123456
+ADMIN_SEED_NAME=Admin
+ADMIN_SEED_ROLE=admin
