--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,6 +2,6 @@
 
 # Public API URL of your backend service (sin sufijo /api)
 # Ejemplos:
-# REACT_APP_API_URL=https://tu-backend.onrender.com
-# REACT_APP_API_URL=https://sj-empleados-system.onrender.com
-REACT_APP_API_URL=https://sj-empleados-system.onrender.com
+# VITE_API_URL=https://tu-backend.onrender.com
+# VITE_API_URL=https://sj-empleados-system.onrender.com
+VITE_API_URL=https://sj-empleados-system.onrender.com
