Fix(Vercel): distDir relativo a frontend y fallback SPA a /index.html

--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,13 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/dist"
+        "distDir": "dist"
       }
     }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ],
   "github": {
     "silent": false
