Fix(Vercel): usar rewrites /(.*) -> /index.html para fallback SPA

--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,8 @@
       }
     }
   ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "github": {
     "silent": false
