ci(frontend): workflows usan working-directory=frontend y sin --cwd; chore(vercel): alinear vercel.json con Vite (buildCommand npm run build, outputDirectory dist); docs: DEPLOY verificado

--- a/.github/workflows/deploy-frontend-preview.yml
+++ b/.github/workflows/deploy-frontend-preview.yml
@@ -18,6 +18,8 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-project-name: sj-empleados-system
+          scope: weapubs-projects
           working-directory: frontend
-          prod: false
+          vercel-args: '--confirm'
           github-comment: true
