--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,14 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "framework": "vite",
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "build": {
+    "env": {
+      "VITE_API_URL": "https://sj-empleados-system.onrender.com"
     }
-  ],
+  },
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
