fix(vercel): añadir fallback SPA (routes -> /index.html)

--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,8 @@
         "installCommand": "npm install"
       }
     }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
