--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     }
   ],
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ],
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
   
 }
